Add Domain and Faces UI

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,9 +6,13 @@
 </head>
 <body>
 
-<h2>MicroProfile</h2>
+<h1>Jakarta EE with JMS and JSF Sample</h1>
 
-<a href="data/hello" target="_blank" >Hello JAX-RS endpoint</a> <br/>
+<h2>JSF Pages</h2>
+
+<ul>
+  <li><a href="listBlogPosts.xhtml">List Blog Posts</a></li>
+</ul>
 
 
 
