Add BootsFaces Sample

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,7 @@
 
 <ul>
   <li><a href="listBlogPosts.xhtml">List Blog Posts</a></li>
+  <li><a href="listBlogPosts-bootstrap.xhtml">List Blog Posts (Bootstrap UI)</a></li>
 </ul>
 
 
