--- a/src/main/webapp/listBlogPosts-bootstrap.xhtml
+++ b/src/main/webapp/listBlogPosts-bootstrap.xhtml
@@ -4,6 +4,7 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html
   xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:f="http://java.sun.com/jsf/core"
   xmlns:h="http://java.sun.com/jsf/html"
   xmlns:c="http://java.sun.com/jsp/jstl/core"
   xmlns:b="http://bootsfaces.net/ui"
@@ -50,16 +51,28 @@
     <b:container>
       <h:form>
         <div>
-          <h:outputLabel for="txtTitle" value="Title"/>
-          <h:inputText id="txtTitle" value="#{createBlogPostBean.newBlogPost.title}"/>
+          <b:inputText placeholder="Title" id="txtTitle" value="#{createBlogPostBean.newBlogPost.title}">
+            <!-- https://fontawesome.com/search -->
+            <f:facet name="prepend">
+              <b:iconAwesome value="header" />
+            </f:facet>
+          </b:inputText>
           <h:message for="txtTitle"/>
         </div>
         <div>
-          <h:outputLabel for="txtContent" value="Content"/>
-          <h:inputText id="txtContent" value="#{createBlogPostBean.newBlogPost.content}"/>
+          <b:inputText placeholder="Content here..." id="txtContent" value="#{createBlogPostBean.newBlogPost.content}">
+            <f:facet name="prepend">
+              <b:iconAwesome value="pencil" />
+            </f:facet>
+          </b:inputText>
           <h:message for="txtContent"/>
         </div>
-        <h:commandButton action="#{createBlogPostBean.action()}" value="Create Blog Post"/>
+        <b:commandButton
+          action="#{createBlogPostBean.action()}"
+          value="Create Blog Post"
+          look="primary btn-block"
+          icon="plus"
+          size="lg"/>
         <h:messages globalOnly="true"/>
       </h:form>
     </b:container>
