Add component tree / backing bean sample

--- a/producer-jsf/src/main/webapp/index.html
+++ b/producer-jsf/src/main/webapp/index.html
@@ -11,6 +11,7 @@
 <h2>JSF Pages</h2>
 
 <ul>
+  <li><a href="component-tree-sample.xhtml">Component Tree Sample</a></li>
   <li><a href="listBlogPosts.xhtml">List Blog Posts</a></li>
   <li><a href="listBlogPosts-bootstrap.xhtml">List Blog Posts (Bootstrap UI)</a></li>
 </ul>
